add change driver page

--- a/web/index.html
+++ b/web/index.html
@@ -513,7 +513,7 @@
                             <!-- brand -->
                             <div class="form-outline mb-2 ms-4 me-4">
                                 <label class="form-label text-dark fw-light " for="brand" style="font-size: 15px;">* Brand</label>
-                                <select aria-label="Default select example" class="form-select shadow" style="height: 32px" id="brand">
+                                <select aria-label="Default select example" class="form-select shadow" style="height: 38px" id="brand">
                                     <option selected value="0">None</option>
                                     <option value="1">Suzuki Alto - Premium - Manual * 7</option>
                                     <option value="2">Suzuki Alto K10 - Auto * 8</option>
@@ -534,7 +534,7 @@
                             <!-- colour -->
                             <div class="form-outline mb-2 ms-4 me-4">
                                 <label class="form-label text-dark fw-light " for="colour" style=" font-size: 15px;">* Colour</label>
-                                <select aria-label="Default select example" class="form-select shadow" style="height: 32px" id="colour">
+                                <select aria-label="Default select example" class="form-select shadow" style="height: 38px" id="colour">
                                     <option selected value="0">None</option>
                                     <option value="1">White/white pearl</option>
                                     <option value="2">Black/black effect</option>
@@ -553,7 +553,7 @@
                             <!-- type -->
                             <div class="form-outline mb-2 ms-4 me-4">
                                 <label class="form-label text-dark fw-light " for="type" style="font-size: 15px;">* Type</label>
-                                <select aria-label="Default select example" class="form-select shadow" style="height: 32px" id="type">
+                                <select aria-label="Default select example" class="form-select shadow" style="height: 38px" id="type">
                                     <option selected value="0">None</option>
                                     <option value="1">General</option>
                                     <option value="2">Premium</option>
@@ -575,7 +575,7 @@
                             <!-- fuel type -->
                             <div class="form-outline mb-2 ms-4 me-4">
                                 <label class="form-label text-dark fw-light " for="fuelType" style="font-size: 15px;">* Fuel Type</label>
-                                <select aria-label="Default select example" class="form-select shadow" style="height: 32px" id="fuelType">
+                                <select aria-label="Default select example" class="form-select shadow" style="height: 38px" id="fuelType">
                                     <option selected value="0">None</option>
                                     <option value="1">Petrol</option>
                                     <option value="2">Diesel</option>
@@ -586,7 +586,7 @@
                             <!-- transmission type -->
                             <div class="form-outline mb-2 ms-4 me-4">
                                 <label class="form-label text-dark fw-light " for="transmissionType" style="font-size: 15px;">* Transmission Type</label>
-                                <select aria-label="Default select example" class="form-select shadow" style="height: 32px" id="transmissionType">
+                                <select aria-label="Default select example" class="form-select shadow" style="height: 38px" id="transmissionType">
                                     <option selected value="0">None</option>
                                     <option value="1">Manual</option>
                                     <option value="2">Auto</option>
@@ -645,7 +645,7 @@
                             <!-- available or not -->
                             <div class="form-outline mb-2 ms-4 me-4">
                                 <label class="form-label text-dark fw-light " for="availableOrNot" style="font-size: 15px;">* Available Or Not</label>
-                                <select aria-label="Default select example" class="form-select shadow" style="height: 32px" id="availableOrNot">
+                                <select aria-label="Default select example" class="form-select shadow" style="height: 38px" id="availableOrNot">
                                     <option selected value="0">None</option>
                                     <option value="1">Available</option>
                                     <option value="2">Not Available</option>
@@ -656,7 +656,7 @@
                             <!-- damage or not -->
                             <div class="form-outline mb-2 ms-4 me-4">
                                 <label class="form-label text-dark fw-light " for="damageOrNot" style="font-size: 15px;">* Damage Or Not</label>
-                                <select aria-label="Default select example" class="form-select shadow" style="height: 32px" id="damageOrNot">
+                                <select aria-label="Default select example" class="form-select shadow" style="height: 38px" id="damageOrNot">
                                     <option selected value="0">None</option>
                                     <option value="1">Damage</option>
                                     <option value="2">Not Damage</option>
@@ -667,7 +667,7 @@
                             <!-- under maintain or not -->
                             <div class="form-outline mb-2 ms-4 me-4">
                                 <label class="form-label text-dark fw-light " for="availableOrNot" style="font-size: 15px;">* Under Maintain Or Not</label>
-                                <select aria-label="Default select example" class="form-select shadow" style="height: 32px" id="underMaintainOrNot">
+                                <select aria-label="Default select example" class="form-select shadow" style="height: 38px" id="underMaintainOrNot">
                                     <option selected value="0">None</option>
                                     <option value="1">Maintained</option>
                                     <option value="2">Under Maintain</option>
@@ -771,7 +771,97 @@
 
     <section id="DriverAddPage" style="width: 100%; height: 100vh ;background-color: rgba(0, 0, 0, 0.6);">
 
+        <div class=" border border-3 border-white rounded-1 shadow" style="width: 500px; position: relative;top: 50px;bottom: 0;right: 0;left: 0;margin: auto;height: 620px;background-image: radial-gradient(circle at top,#bacbe6,#c7dbd2);">
 
+            <div class="mb-0 text-center  border-bottom border-2 " style="position: relative;top: 20px;">
+                <h1 class="mt-1 text-dark fw-bold fst-italic " style="font-family: 'PT Serif', serif;">- ADD DRIVER -</h1>
+            </div>
+
+            <div class=" mt-0 ms-2 me-5">
+                <form class="ms-5 me-5" style="position: relative; top: 50px;">
+
+                    <div class="row">
+                        <!-- driver id -->
+                        <div class="form-outline mb-2 ms-4 me-4">
+                            <label class="form-label text-dark fw-light " for="driverId" style="font-size: 15px;">* Driver Id</label>
+                            <input type="text" id="driverId" class="form-control shadow  border border-2 border-white bg-light rounded-3" />
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <!-- driver name -->
+                        <div class="form-outline mb-2 ms-4 me-4">
+                            <label class="form-label text-dark fw-light " for="driverName" style="font-size: 15px;">* Name</label>
+                            <input type="text" id="driverName" class="form-control shadow  border border-2 border-white bg-light rounded-3" />
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <!-- driver address -->
+                        <div class="form-outline mb-2 ms-4 me-4">
+                            <label class="form-label text-dark fw-light " for="driverAddress" style="font-size: 15px;">* Address</label>
+                            <input type="text" id="driverAddress" class="form-control shadow  border border-2 border-white bg-light rounded-3" />
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <!-- driver age -->
+                        <div class="form-outline mb-2 ms-4 me-4">
+                            <label class="form-label text-dark fw-light " for="driverAge" style="font-size: 15px;">* Age</label>
+                            <input type="number" id="driverAge" class="form-control shadow  border border-2 border-white bg-light rounded-3" />
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <!-- driver contact -->
+                        <div class="form-outline mb-2 ms-4 me-4">
+                            <label class="form-label text-dark fw-light " for="driverContact" style="font-size: 15px;">* Contact</label>
+                            <input type="tel" id="driverContact" class="form-control shadow  border border-2 border-white bg-light rounded-3" />
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <!-- driver release or not -->
+                        <div class="form-outline mb-2 ms-4 me-4">
+                            <label class="form-label text-dark fw-light " for="driverReleaseOrNot" style="font-size: 15px;">* Release Or Not</label>
+                            <select aria-label="Default select example" class="form-select shadow" style="height: 38px" id="driverReleaseOrNot">
+                                <option selected value="0">None</option>
+                                <option value="1">Release</option>
+                                <option value="2">Not Release</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <hr class="divider-horizontal-blurry mb-0" style="" />
+
+                    <!--button panel-->
+                    <div class="row mt-4">
+                        <div class="col text-center">
+
+                        </div>
+                        <div class="col text-center ">
+                            <div class="col" style="width: 200px;">
+                                <button type="button" class="btn btn-success btn-lg btn-floating ms-2 me-2 shadow">
+                                    <i class="fas fa-pen-alt"></i>
+                                </button>
+                                <button type="button" class="btn btn-info btn-lg btn-floating ms-2 me-2 shadow">
+                                    <i class="fas fa-plus"></i>
+                                </button>
+                                <button type="button" class="btn btn-danger btn-lg btn-floating ms-2 me-2 shadow">
+                                    <i class="fas fa-times"></i>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="col text-center">
+
+                        </div>
+                    </div>
+
+                </form>
+
+            </div>
+
+        </div>
 
     </section>
 
@@ -823,6 +913,107 @@
             <div style="width: 90vw; height: 70vh; border: 2px solid black;position: relative; top: 67px;right: 0;bottom: 0;left: 0;margin: auto">
 
 
+
+            </div>
+
+        </div>
+
+    </section>
+
+    <section id="ChangeDriver" style="width: 100%; height: 100vh ;background-color: rgba(0, 0, 0, 0.6);">
+
+        <div class="h-75 border border-3 border-white rounded-1 shadow" style="width: 500px; position: relative;top: 50px;bottom: 0;right: 0;left: 0;margin: auto;background-image: radial-gradient(circle at top,#bacbe6,#c7dbd2);">
+
+            <div class="mb-0 text-center  border-bottom border-2 " style="position: relative;top: 20px;">
+                <h1 class="mt-1 text-dark fw-bold fst-italic " style="font-family: 'PT Serif', serif;">- CHANGE DRIVER -</h1>
+            </div>
+
+            <div class=" mt-0 ms-2 me-5">
+                <form class="ms-5 me-5" style="position: relative; top: 50px;">
+
+                    <div class="row">
+                        <!-- select reservation number -->
+                        <div class="form-outline mb-2 ms-4 me-2">
+                            <label class="form-label text-dark fw-light " for="chooseReservationIds" style="font-size: 15px;">* Choose Relevant Reservation</label>
+                            <select aria-label="Default select example" class="form-select shadow" style="height: 38px" id="chooseReservationIds">
+                                <option selected value="0">None</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col">
+                            <!-- selected driver id -->
+                            <div class="form-outline mb-2 ms-4  mt-3">
+                                <label class="form-label text-dark fw-light " for="selectedDriverId" style="font-size: 15px;">* Driver Id</label>
+                                <input type="text" id="selectedDriverId" class="form-control shadow  border border-2 border-white bg-light rounded-3" />
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <!-- selected driver name -->
+                            <div class="form-outline mb-2 ms-4  mt-3">
+                                <label class="form-label text-dark fw-light " for="selectedDriverName" style="font-size: 15px;">* Name</label>
+                                <input type="text" id="selectedDriverName" class="form-control shadow  border border-2 border-white bg-light rounded-3" />
+                            </div>
+                        </div>
+                    </div>
+
+                    <hr class="divider-horizontal-blurry mb-0" style="" />
+
+                    <div class="row">
+                        <!-- select new driver id -->
+                        <div class="form-outline mb-2 ms-4 me-4 mt-3">
+                            <label class="form-label text-dark fw-light " for="chooseNewDriverIds" style="font-size: 15px;">* Choose New Driver</label>
+                            <select aria-label="Default select example" class="form-select shadow" style="height: 38px" id="chooseNewDriverIds">
+                                <option selected value="0">None</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col">
+                            <!-- new driver name -->
+                            <div class="form-outline mb-2 ms-4  mt-3">
+                                <label class="form-label text-dark fw-light " for="changedNewDriverName" style="font-size: 15px;">* New Driver Name</label>
+                                <input type="text" id="changedNewDriverName" class="form-control shadow  border border-2 border-white bg-light rounded-3" />
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <!-- new driver contact -->
+                            <div class="form-outline mb-2 ms-4  mt-3">
+                                <label class="form-label text-dark fw-light " for="changedNewDriverContact" style="font-size: 15px;">* New Driver Contact</label>
+                                <input type="text" id="changedNewDriverContact" class="form-control shadow  border border-2 border-white bg-light rounded-3" />
+                            </div>
+                        </div>
+                    </div>
+
+                    <hr class="divider-horizontal-blurry mb-0" style="" />
+
+                    <!--button panel-->
+                    <div class="row mt-4">
+                        <div class="col text-center">
+
+                        </div>
+                        <div class="col text-center ">
+                            <div class="col" style="width: 200px;">
+                                <button type="button" class="btn btn-success  btn-floating ms-2 me-2 shadow">
+                                    <i class="fas fa-pen-alt"></i>
+                                    Change
+                                </button>
+                                <button type="button" class="btn btn-danger  btn-floating ms-2 me-2 shadow">
+                                    <i class="fas fa-times"></i>
+                                    Cancel
+                                </button>
+                            </div>
+                        </div>
+                        <div class="col text-center">
+
+                        </div>
+                    </div>
+
+                </form>
 
             </div>
 
