complete add payment page

--- a/web/index.html
+++ b/web/index.html
@@ -1195,8 +1195,8 @@
 
                     <div class="row">
                         <div class="col">
-                            <div class="col" style="width: 200px;">
-                                <button type="button" class="btn btn-info btn-floating ms-2 me-2 shadow">
+                            <div class="col">
+                                <button type="button" class="btn btn-info btn-floating ms-2 me-2 shadow w-100 mt-5">
                                     <i class="fas fa-plus"></i>
                                     Calculate
                                 </button>
